@startuml Domain Model
' !theme carbon-gray
' !theme plain
' !theme aws-orange
' !theme materia
!theme cerulean
hide circle
' hide members

class Calender {
    - I d
    - WorkoutPlan List<Workout, Date> 
    - MealPlan List<Meal, Date> 
}

class Account {
    - I d
    - Name
    - Weight
    - Gender
    - Age
    - Email 
    - Password
}

Class Workout {
    - I d
    - Name 
    - Duration
    - Exercises List<Exercise>
}

class Exercise {
    - I d
    - Name 
    - Category
    - Intensity
    - Equipment
    - Repetitions
    - Sets
    - Picture
    - Video
}

class Meal {
    - I d 
    - Name 
    - Category
    - Description
    - NutritionalValue
}

class Dish {
    - I d
    - Name 
    - Category
    - NutritionalValue
    - Recipe
    - Ingredients
    - Picture
    - Preptime
}

class Milestone {
    - I d
    - Category
    - Goal
    - Progress List<Improvement, Date>
    - StartDate
    - EndDate 
}

Account  -l- "0..*" Meal : Has 
Account  -u- Calender : Has a
Account  -r-  "0..*"Workout : Has 
Account  -d- "0.-*" Milestone : Has 

Meal -d- "1..*" Dish : Consists of 
Workout -d- "1..*" Exercise : Consists of

Calender -- "0..*" Workout : Contains
Calender -- "0..*" Meal : Contains

@enduml